--- a/.ssh/config
+++ b/.ssh/config
@@ -3,3 +3,11 @@ Host market
  Hostname 139.59.255.240
  IdentityFile ~/.ssh/id_rsa
  ForwardAgent yes
+ ServerAliveInterval 180
+
+Host market-devops
+ User devops
+ Hostname 139.59.255.240
+ IdentityFile ~/.ssh/id_rsa
+ ForwardAgent yes
+ ServerAliveInterval 180
