--- a/.ssh/config
+++ b/.ssh/config
@@ -11,3 +11,9 @@ Host market-devops
  IdentityFile ~/.ssh/id_rsa
  ForwardAgent yes
  ServerAliveInterval 180
+
+Host pumba
+ User devops
+ Hostname 85.159.212.238
+ IdentityFile ~/.ssh/id_rsa
+ ForwardAgent yes
