--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,39 @@
+# Files
+# -----------------
+
+.CFUserTextEncoding
 .DS_Store
 .NERDTreeBookmarks
 .bash_history
+.bash_login
+.bashrc
+.environments
+.gemrc
+.gtk-bookmarks
+.guard_history
 .heroku
 .irb*
+.lesshst
+.mysql_history
+.netrc
+.npm
+.profile
+.pry_history
+.pryrc
 .psql_history
+.rdebug_hist
+.read_manga_parser.yml
+.rnd
+.rvmrc
+.site_parser_with_cache.yml
+.sqlite_history
+.ssh
+.viminf*
 .viminfo
+.vimrc
+.world_art_parser.yml
+.zcompdump*
+.zlogin
 .zsh*
 
 .vim/.sessions
@@ -12,30 +41,49 @@
 .vim/browser
 .vim/bundle
 
-/.Trash
-/.backup
-/.bash_sessions
-/.bundle
-/.cache
-/.gem
-/.local
-/.oh-my-zsh
-/.pow
-/.rbenv
-/.subversion
-/Applications
-/Backup
-/Desktop
-/Documents
-/Downloads
-/Dropbox
-/Library
-/Movies
-/Music
-/Pictures
-/Public
-/apps
-/go
-/log
-/projects
-/tmp
+
+# Directories
+# -----------------
+
+.Trash/
+.atom/
+.backup/
+.bash_sessions/
+.berkshelf/
+.bundle/
+.cache/
+.chefdk/
+.codeintel/
+.config/
+.dropbox/
+.gem/
+.gsutil/
+.hex/
+.local/
+.m2/
+.mix/
+.node-gyp/
+.oh-my-zsh/
+.oracle_jre_usage/
+.phantomjs/
+.pow
+.rbenv/
+.rvm/
+.subversion/
+.vim_backups/
+Applications/
+Backup/
+Desktop/
+Documents/
+Downloads/
+Dropbox/
+Library/
+Movies/
+Music/
+Pictures/
+Public/
+apps/
+go/
+log/
+projects/
+tmp/
