--- a/.ssh/config
+++ b/.ssh/config
@@ -17,3 +17,15 @@ Host pumba
  Hostname 85.159.212.238
  IdentityFile ~/.ssh/id_rsa
  ForwardAgent yes
+
+Host complead
+ User devops
+ Hostname 213.168.249.30
+ IdentityFile ~/.ssh/id_rsa
+ ForwardAgent yes
+
+Host iceperk
+ User devops
+ Hostname 176.58.96.252
+ IdentityFile ~/.ssh/id_rsa
+ ForwardAgent yes
