--- a/.ssh/config
+++ b/.ssh/config
@@ -12,9 +12,9 @@ Host market-devops
  ForwardAgent yes
  ServerAliveInterval 180
 
-Host pumba
- User devops
- Hostname 85.159.212.238
+Host mybudget
+ User deploy
+ Hostname 178.79.173.247
  IdentityFile ~/.ssh/id_rsa
  ForwardAgent yes
 
