--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .bash_history
 .bash_login
 .bashrc
+.emulator_console_auth_token
 .environments
 .gemrc
 .gtk-bookmarks
@@ -46,6 +47,7 @@
 # -----------------
 
 .Trash/
+.android/
 .atom/
 .backup/
 .bash_sessions/
@@ -59,6 +61,7 @@
 .dropbox/
 .gem/
 .gnupg/
+.gradle/
 .gsutil/
 .hex/
 .local/
