--- a/.ssh/config
+++ b/.ssh/config
@@ -1,22 +1,15 @@
-Host market
- User root
- Hostname 139.59.255.240
- IdentityFile ~/.ssh/id_rsa
- ForwardAgent yes
- ServerAliveInterval 180
-
-Host market-devops
- User devops
- Hostname 139.59.255.240
- IdentityFile ~/.ssh/id_rsa
- ForwardAgent yes
- ServerAliveInterval 180
-
 Host mybudget
  User deploy
  Hostname 178.79.173.247
  IdentityFile ~/.ssh/id_rsa
  ForwardAgent yes
+
+Host market
+ User devops
+ Hostname 139.59.255.240
+ IdentityFile ~/.ssh/id_rsa
+ ForwardAgent yes
+ ServerAliveInterval 180
 
 Host complead
  User devops
@@ -27,5 +20,23 @@ Host complead
 Host iceperk
  User devops
  Hostname 176.58.96.252
+ IdentityFile ~/.ssh/id_rsa
+ ForwardAgent yes
+
+Host trantoria
+ User devops
+ Hostname 178.62.41.131
+ IdentityFile ~/.ssh/id_rsa
+ ForwardAgent yes
+
+Host khdeal
+ User devops
+ Hostname 139.59.111.61
+ IdentityFile ~/.ssh/id_rsa
+ ForwardAgent yes
+
+Host amazing_supplies
+ User devops
+ Hostname 45.79.91.219
  IdentityFile ~/.ssh/id_rsa
  ForwardAgent yes
