--- a/.ssh/config
+++ b/.ssh/config
@@ -35,7 +35,7 @@ Host khdeal
  IdentityFile ~/.ssh/id_rsa
  ForwardAgent yes
 
-Host amazing_supplies
+Host as
  User devops
  Hostname 45.79.76.133
  IdentityFile ~/.ssh/id_rsa
