--- a/.ssh/config
+++ b/.ssh/config
@@ -36,7 +36,20 @@ Host khdeal
  ForwardAgent yes
 
 Host as
- User devops
- Hostname 45.79.76.133
- IdentityFile ~/.ssh/id_rsa
- ForwardAgent yes
+  User devops
+  Hostname 45.79.76.133
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
+
+Host as
+  User devops
+  Hostname 45.79.76.133
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
+
+Host github-asscraper
+  User git
+  Hostname github.com
+  PreferredAuthentications publickey
+  IdentitiesOnly yes
+  IdentityFile ~/.ssh/id_rsa
