Update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -47,7 +47,7 @@ Host as
   IdentityFile ~/.ssh/id_rsa
   ForwardAgent yes
 
-Host github-asscraper
+Host asscraper.github.com
   User git
   Hostname github.com
   PreferredAuthentications publickey
