Update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -35,9 +35,9 @@ Host khdeal
  IdentityFile ~/.ssh/id_rsa
  ForwardAgent yes
 
-Host as
+Host a
   User devops
-  Hostname 45.79.76.133
+  Hostname 172.104.228.214
   IdentityFile ~/.ssh/id_rsa
   ForwardAgent yes
 
