--- a/.ssh/config
+++ b/.ssh/config
@@ -1,9 +1,3 @@
-Host mybudget
- User deploy
- Hostname 178.79.173.247
- IdentityFile ~/.ssh/id_rsa
- ForwardAgent yes
-
 Host market
  User devops
  Hostname 139.59.255.240
@@ -53,3 +47,21 @@ Host asscraper.github.com
   PreferredAuthentications publickey
   IdentitiesOnly yes
   IdentityFile ~/.ssh/id_rsa
+
+Host cardwiz
+  User devops
+  Hostname 173.255.245.205
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
+
+Host cardwizdata
+  User devops
+  Hostname 23.92.27.162
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
+
+Host mybudget
+  User devops
+  Hostname 176.58.100.230
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
