--- a/.ssh/config
+++ b/.ssh/config
@@ -65,3 +65,9 @@ Host mybudget
   Hostname 176.58.100.230
   IdentityFile ~/.ssh/id_rsa
   ForwardAgent yes
+
+Host minisklad
+  User devops
+  Hostname 109.237.26.159
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
