--- a/.ssh/config
+++ b/.ssh/config
@@ -17,18 +17,6 @@ Host iceperk
  IdentityFile ~/.ssh/id_rsa
  ForwardAgent yes
 
-Host trantoria
- User devops
- Hostname 178.62.41.131
- IdentityFile ~/.ssh/id_rsa
- ForwardAgent yes
-
-Host khdeal
- User devops
- Hostname 139.59.111.61
- IdentityFile ~/.ssh/id_rsa
- ForwardAgent yes
-
 Host a
   User devops
   Hostname 172.104.228.214
@@ -71,3 +59,8 @@ Host minisklad
   Hostname 109.237.26.159
   IdentityFile ~/.ssh/id_rsa
   ForwardAgent yes
+
+Host minisklad-amsterdam
+  User devops
+  Hostname 172.105.70.196
+  IdentityFile ~/.ssh/id_rsa
