update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -3,19 +3,6 @@ Host *
   UseKeychain yes
   IdentityFile ~/.ssh/id_rsa
 
-Host market
- User devops
- Hostname 139.59.255.240
- IdentityFile ~/.ssh/id_rsa
- ForwardAgent yes
- ServerAliveInterval 180
-
-Host complead
- User devops
- Hostname 213.168.249.30
- IdentityFile ~/.ssh/id_rsa
- ForwardAgent yes
-
 Host iceperk
  User devops
  Hostname 176.58.96.252
@@ -50,6 +37,12 @@ Host cardwiz
 Host cardwizdata
   User devops
   Hostname 23.92.27.162
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
+
+Host staging.cardwizdata
+  User devops
+  Hostname 45.79.87.137
   IdentityFile ~/.ssh/id_rsa
   ForwardAgent yes
 
