--- a/.ssh/config
+++ b/.ssh/config
@@ -40,7 +40,7 @@ Host cardwizdata
   IdentityFile ~/.ssh/id_rsa
   ForwardAgent yes
 
-Host staging.cardwizdata
+Host stage.cardwizdata
   User devops
   Hostname 45.79.87.137
   IdentityFile ~/.ssh/id_rsa
