--- a/.ssh/config
+++ b/.ssh/config
@@ -28,9 +28,9 @@ Host asscraper.github.com
   IdentitiesOnly yes
   IdentityFile ~/.ssh/id_rsa
 
-Host cardwiz
+Host stage.cardwiz
   User devops
-  Hostname 173.255.245.205
+  Hostname 198.74.51.237
   IdentityFile ~/.ssh/id_rsa
   ForwardAgent yes
 
