--- a/.ssh/config
+++ b/.ssh/config
@@ -62,3 +62,19 @@ Host minisklad-amsterdam
   User devops
   Hostname 172.105.70.196
   IdentityFile ~/.ssh/id_rsa
+
+Host shiki_db
+  HostName 88.198.7.116
+  User devops
+  IdentityFile ~/.ssh/id_rsa
+
+Host shiki_web
+  HostName 88.198.7.123
+  User devops
+  IdentityFile ~/.ssh/id_rsa
+
+Host m_node1
+  User devops
+  Hostname 192.168.1.17
+  IdentityFile ~/.ssh/id_rsa
+  # ForwardAgent yes
