--- a/.ssh/config
+++ b/.ssh/config
@@ -77,4 +77,8 @@ Host m_node1
   User devops
   Hostname 192.168.1.17
   IdentityFile ~/.ssh/id_rsa
-  # ForwardAgent yes
+
+Host m-node1
+  User devops
+  Hostname 192.168.1.17
+  IdentityFile ~/.ssh/id_rsa
