Update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -3,15 +3,15 @@ Host *
   UseKeychain yes
   IdentityFile ~/.ssh/id_rsa
 
-Host iceperk
- User devops
- Hostname 176.58.96.252
- IdentityFile ~/.ssh/id_rsa
- ForwardAgent yes
-
 Host a
   User devops
   Hostname 172.104.228.214
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
+
+Host mybudget
+  User devops
+  Hostname 176.58.100.230
   IdentityFile ~/.ssh/id_rsa
   ForwardAgent yes
 
@@ -28,12 +28,9 @@ Host asscraper.github.com
   IdentitiesOnly yes
   IdentityFile ~/.ssh/id_rsa
 
-Host stage.cardwiz
-  User devops
-  Hostname 198.74.51.237
-  IdentityFile ~/.ssh/id_rsa
-  ForwardAgent yes
-
+# --------------------------------
+# CardWiz Data
+# --------------------------------
 Host cardwizdata
   User devops
   Hostname 23.92.27.162
@@ -46,11 +43,37 @@ Host stage.cardwizdata
   IdentityFile ~/.ssh/id_rsa
   ForwardAgent yes
 
-Host mybudget
+host stage-cardwizdata
+  HostName 45.79.87.137
   User devops
-  Hostname 176.58.100.230
   IdentityFile ~/.ssh/id_rsa
-  ForwardAgent yes
+
+# --------------------------------
+# CardWiz Web
+# --------------------------------
+host stage.cardwiz
+  HostName 198.74.51.237
+  User devops
+  IdentityFile ~/.ssh/id_rsa
+
+host stage-cardwiz
+  HostName 198.74.51.237
+  User devops
+  IdentityFile ~/.ssh/id_rsa
+
+# --------------------------------
+# Shikimori
+# --------------------------------
+
+Host shiki_db
+  HostName 88.198.7.116
+  User devops
+  IdentityFile ~/.ssh/id_rsa
+
+Host shiki_web
+  HostName 88.198.7.123
+  User devops
+  IdentityFile ~/.ssh/id_rsa
 
 Host minisklad
   User devops
@@ -61,16 +84,6 @@ Host minisklad
 Host minisklad-amsterdam
   User devops
   Hostname 172.105.70.196
-  IdentityFile ~/.ssh/id_rsa
-
-Host shiki_db
-  HostName 88.198.7.116
-  User devops
-  IdentityFile ~/.ssh/id_rsa
-
-Host shiki_web
-  HostName 88.198.7.123
-  User devops
   IdentityFile ~/.ssh/id_rsa
 
 Host m_node1
