--- a/.ssh/config
+++ b/.ssh/config
@@ -94,3 +94,13 @@ Host m-node1
   User devops
   Hostname 192.168.1.17
   IdentityFile ~/.ssh/id_rsa
+
+Host m_node_lublino
+  User devops
+  Hostname 195.9.142.238
+  IdentityFile ~/.ssh/id_rsa
+
+Host m-node-lublino
+  User devops
+  Hostname 195.9.142.238
+  IdentityFile ~/.ssh/id_rsa
