Update ssh configs

--- a/.ssh/config
+++ b/.ssh/config
@@ -75,6 +75,11 @@ Host shiki_web
   User devops
   IdentityFile ~/.ssh/id_rsa
 
+
+# --------------------------------
+# MiniSklad
+# --------------------------------
+
 Host minisklad
   User devops
   Hostname 109.237.26.159
@@ -85,6 +90,28 @@ Host minisklad-amsterdam
   Hostname 172.105.70.196
   IdentityFile ~/.ssh/id_rsa
 
+Host m_node_lublino
+  User devops
+  Hostname 195.9.142.238
+  IdentityFile ~/.ssh/id_rsa
+
+Host m-node-lublino
+  User devops
+  Hostname 195.9.142.238
+  IdentityFile ~/.ssh/id_rsa
+
+Host m_node_belomorskaya
+  User devops
+  Hostname 195.9.83.170
+  IdentityFile ~/.ssh/id_rsa
+
+Host m-node-belomorskaya
+  User devops
+  Hostname 195.9.83.170
+  IdentityFile ~/.ssh/id_rsa
+
+# Home
+# --------------------------------
 Host m_node1
   User devops
   Hostname 192.168.1.17
@@ -95,12 +122,12 @@ Host m-node1
   Hostname 192.168.1.17
   IdentityFile ~/.ssh/id_rsa
 
-Host m_node_lublino
+Host m_node2
   User devops
-  Hostname 195.9.142.238
+  Hostname 192.168.1.146
   IdentityFile ~/.ssh/id_rsa
 
-Host m-node-lublino
+Host m-node2
   User devops
-  Hostname 195.9.142.238
+  Hostname 192.168.1.146
   IdentityFile ~/.ssh/id_rsa
