Update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -85,10 +85,8 @@ Host minisklad
   Hostname 109.237.26.159
   IdentityFile ~/.ssh/id_rsa
 
-Host minisklad-amsterdam
-  User devops
-  Hostname 172.105.70.196
-  IdentityFile ~/.ssh/id_rsa
+# Nodes
+# --------------------------------
 
 Host m_node_lublino
   User devops
@@ -100,6 +98,16 @@ Host m-node-lublino
   Hostname 195.9.142.238
   IdentityFile ~/.ssh/id_rsa
 
+# Host m_node_lublino_2
+#   User devops
+#   Hostname 192.168.0.1
+#   IdentityFile ~/.ssh/id_rsa
+# 
+# Host m-node-lublino-2
+#   User devops
+#   Hostname 192.168.0.1
+#   IdentityFile ~/.ssh/id_rsa
+
 Host m_node_belomorskaya
   User devops
   Hostname 195.9.83.170
@@ -108,6 +116,28 @@ Host m_node_belomorskaya
 Host m-node-belomorskaya
   User devops
   Hostname 195.9.83.170
+  IdentityFile ~/.ssh/id_rsa
+
+Host m_node_zhukova
+  User devops
+  Hostname 109.188.101.45
+  IdentityFile ~/.ssh/id_rsa
+
+Host m-node-zhukova
+  User devops
+  Hostname 109.188.101.45
+  IdentityFile ~/.ssh/id_rsa
+
+# Office
+# --------------------------------
+Host m_node3
+  User devops
+  Hostname 192.168.0.1
+  IdentityFile ~/.ssh/id_rsa
+
+Host m-node3
+  User devops
+  Hostname 192.168.0.1
   IdentityFile ~/.ssh/id_rsa
 
 # Home
