--- a/.ssh/config
+++ b/.ssh/config
@@ -64,7 +64,6 @@ host stage-cardwiz
 # --------------------------------
 # Shikimori
 # --------------------------------
-
 Host shiki_db
   HostName 88.198.7.116
   User devops
@@ -75,14 +74,22 @@ Host shiki_web
   User devops
   IdentityFile ~/.ssh/id_rsa
 
-
 # --------------------------------
-# MiniSklad
+# Kladovkin
 # --------------------------------
-
 Host minisklad
   User devops
   Hostname 109.237.26.159
+  IdentityFile ~/.ssh/id_rsa
+
+Host kladovkin
+  User devops
+  Hostname 109.237.26.159
+  IdentityFile ~/.ssh/id_rsa
+
+Host spacehubstore
+  User devops
+  Hostname 172.104.151.153
   IdentityFile ~/.ssh/id_rsa
 
 # Nodes
@@ -144,20 +151,10 @@ Host m-node3
 # --------------------------------
 Host m_node1
   User devops
-  Hostname 192.168.1.17
+  Hostname 192.168.1.31
   IdentityFile ~/.ssh/id_rsa
 
 Host m-node1
   User devops
-  Hostname 192.168.1.17
-  IdentityFile ~/.ssh/id_rsa
-
-Host m_node2
-  User devops
-  Hostname 192.168.1.146
-  IdentityFile ~/.ssh/id_rsa
-
-Host m-node2
-  User devops
-  Hostname 192.168.1.146
+  Hostname 192.168.1.31
   IdentityFile ~/.ssh/id_rsa
