--- a/.ssh/config
+++ b/.ssh/config
@@ -15,6 +15,12 @@ Host mybudget
   IdentityFile ~/.ssh/id_rsa
   ForwardAgent yes
 
+Host mybudget2
+  User devops
+  Hostname 172.105.74.210
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
+
 Host as
   User devops
   Hostname 45.79.76.133
@@ -75,7 +81,7 @@ Host shiki_web
   IdentityFile ~/.ssh/id_rsa
 
 # --------------------------------
-# Kladovkin
+# Minisklad
 # --------------------------------
 Host minisklad
   User devops
@@ -105,16 +111,6 @@ Host m-node-lublino
   Hostname 195.9.142.238
   IdentityFile ~/.ssh/id_rsa
 
-# Host m_node_lublino_2
-#   User devops
-#   Hostname 192.168.0.1
-#   IdentityFile ~/.ssh/id_rsa
-# 
-# Host m-node-lublino-2
-#   User devops
-#   Hostname 192.168.0.1
-#   IdentityFile ~/.ssh/id_rsa
-
 Host m_node_belomorskaya
   User devops
   Hostname 195.9.83.170
@@ -133,6 +129,26 @@ Host m_node_zhukova
 Host m-node-zhukova
   User devops
   Hostname 185.51.21.138
+  IdentityFile ~/.ssh/id_rsa
+
+Host m_node_altufyevo
+  User devops
+  Hostname 94.125.187.250
+  IdentityFile ~/.ssh/id_rsa
+
+Host m-node-altufyevo
+  User devops
+  Hostname 94.125.187.250
+  IdentityFile ~/.ssh/id_rsa
+
+Host m_node_yanaraynisa
+  User devops
+  Hostname 213.79.119.226
+  IdentityFile ~/.ssh/id_rsa
+
+Host m-node-yanaraynisa
+  User devops
+  Hostname 213.79.119.226
   IdentityFile ~/.ssh/id_rsa
 
 # Office
@@ -158,3 +174,27 @@ Host m-node1
   User devops
   Hostname 192.168.1.31
   IdentityFile ~/.ssh/id_rsa
+
+Host m_node4
+  User devops
+  Hostname 192.168.1.103
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
+
+Host m-node4
+  User devops
+  Hostname 192.168.1.103
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
+
+Host m_node5
+  User devops
+  Hostname 192.168.1.50
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
+
+Host m-node5
+  User devops
+  Hostname 192.168.1.50
+  IdentityFile ~/.ssh/id_rsa
+  ForwardAgent yes
